--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Добрий вечір</h1>
     <script src="script.js"></script>
+    <!-- <script src="new.js"></script> -->
 </body>
 </html>
